refactor: update sorting and filtering properties in profiles interface
